--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=GametopiaDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost;Database=Gametopia;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
